<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="137dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/whitelogo" />

    <TextView
        android:id="@+id/advertisementDetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:text="@string/addational_details"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/postButton"
        android:layout_below="@+id/advertisementDetailsTextView"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="-5dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10sp"
            android:paddingLeft="10sp"
            android:hint="@string/firstName"
            android:textColor="@color/colorTextView"
            android:textColorHint="#fff"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10sp"
            android:paddingLeft="10sp"
            android:hint="@string/last_name"
            android:textColor="@color/colorTextView"
            android:textColorHint="#fff"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10sp"
            android:paddingLeft="10sp"
            android:hint="@string/street_address"
            android:textColor="@color/colorTextView"
            android:textColorHint="#fff"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/cityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10sp"
            android:paddingLeft="10sp"
            android:hint="@string/city"
            android:textColor="@color/colorTextView"
            android:textColorHint="#fff"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10sp"
            android:paddingLeft="10sp"
            android:hint="@string/phone_number"
            android:textColor="@color/colorTextView"
            android:textColorHint="#fff"
            android:textSize="15sp" />


    </LinearLayout>

    <Button
        android:id="@+id/postButton"
        android:layout_width="255dp"
        android:layout_height="55dp"
        android:layout_above="@+id/skipTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_drawable"
        android:bottomLeftRadius="50dp"
        android:bottomRightRadius="50dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/skipTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/skip"
        android:textColor="@color/colorTextView"
        android:textSize="15sp" />


</RelativeLayout>
