<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="137dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/whitelogo" />

    <TextView
        android:id="@+id/forgetPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:text="@string/forgot_password"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/forgotTextView"
        android:layout_width="408dp"
        android:layout_height="42dp"
        android:layout_below="@+id/forgetPasswordTextView"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:layout_marginTop="10dp"
        android:text="@string/ForgotText"
        android:textColor="#fff"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:layout_below="@+id/forgotTextView"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="-122dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:hint="@string/email"
            android:textColor="@color/colorTextView"
            android:textColorHint="#fff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/forgotButton"
            android:layout_width="255dp"
            android:layout_height="55dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/button_drawable"
            android:bottomLeftRadius="50dp"
            android:bottomRightRadius="50dp"
            android:text="@string/click_to_send_email"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="16sp" />

    </LinearLayout>






</RelativeLayout>
